# DeepGemini

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_zh.md  alembic.ini  docker-compose.yml  migrate.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7b27956007a6_initial.py  add_system_prompts.py  xxx_update_model_relationships.py  xxxx_add_custom_parameters.py  xxxx_update_custom_parameters.py  xxxx_update_model_defaults.py
app/: api.py  main.py
app/adapters/: meeting_adapter.py
app/clients/: __init__.py  base_client.py  claude_client.py  deepseek_client.py  gemini_client.py  grok3_client.py  openai_client.py  uni_client.py
app/deepclaude/: deepclaude.py
app/deepgemini/: deepgemini.py
app/meeting/: __init__.py  meeting.py  test_meeting.py
app/meeting/agents/: __init__.py  agent.py  agent_factory.py  human_agent.py
app/meeting/logger/: meeting_logger.py
app/meeting/meeting/: meeting.py
app/meeting/meeting_modes/: __init__.py  base_mode.py  brainstorming.py  debate.py  discussion.py  (+3 more)
app/meeting_modes/: base_mode.py
app/migration/: add_summary_columns.py  add_topic_column.py
app/models/: __init__.py  collaboration.py  database.py  multi_step_collaboration.py  schemas.py
app/processors/: discussion_processor.py  role_processor.py
app/routers/: discussion_groups.py  discussions.py  meeting.py  models.py  roles.py
app/routes/: __init__.py  api_key.py  auth.py  configuration.py  model.py
app/static/: app.js  chatllm.html  index.html  login.html  login.js  styles.css
app/utils/: auth.py  logger.py
(+9 files in other folders)
