[project]
name = "deepgemini"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "colorlog>=6.9.0",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.8",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
